2013-03-27  Bin Cheng  <bin.cheng@arm.com>

	* acconfig.h (_FVWRITE_IN_STREAMIO): Undefine.
	* newlib.hin (_FVWRITE_IN_STREAMIO): Undefine.
	* configure.in (--disable-newlib-fvwrite-in-streamio): New option.
	* configure: Regenerated.
	* libc/stdio/fputs.c (_fputs_r): Use _FVWRITE_IN_STREAMIO to
	control __sfvwrite_r.  Add alternative implementation.
	* libc/stdio/fputws.c (_fputws_r): Ditto.
	* libc/stdio/fwrite.c (_fwrite_r): Ditto.
	* libc/stdio/puts.c (_puts_r): Ditto.
	* libc/stdio/vfprintf.c (__ssputs_r, __sfputs_r): New function.
	(_VFPRINTF_R): Use _FVWRITE_IN_STREAMIO to control vector buffer.
	(__SPRINT): Use _FVWRITE_IN_STREAMIO to control macro definition.
	* libc/stdio/vfwprintf.c (_VFWPRINTF_R): Use _FVWRITE_IN_STREAMIO
	to control vector buffer.

2013-03-26  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/stdio/local.h (_STDIO_WITH_THREAD_CANCELLATION_SUPPORT):
	New define.
	* libc/stdio/fclose.c: Use
	_STDIO_WITH_THREAD_CANCELLATION_SUPPORT.
	* libc/stdio/freopen.c: Likewise.
	* libc/stdio64/freopen64.c: Likewise.

2013-03-15  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* newlib/libc/stdio/findfp.c (glue_with_file): New.
	(__sfmoreglue): Use glue_with_file to avoid alignment problems.

2013-02-28  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/machine/setjmp.h (sigjmp_buf): Fix definition of
	sigjmp_buf size if _JBTYPE is defined.

2013-02-26  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/malloc.h (struct mallinfo): Convert type of all members
	to size_t to match all targets.

2013-02-20  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	    Joseph S. Myers <joseph@codesourcery.com>

	* libc/include/sys/_types.h (_ssize_t): Define as signed equivalent of
	size_t with GCC.

2013-02-19  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/memcpy.S: Fix USE_PREFETCH check.

2013-02-01  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/crt0.S: Add recognition of the e3v5
	architecture variant.
